# lab05

./: README.md
.github/workflows/: ci.yaml  ci.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  install_manifest.txt
_build/Testing/Temporary/: CTestCostData.txt
homework/: CMakeLists.txt
homework/formatter_ex/: CMakeLists.txt  formatter_ex.h
homework/formatter_ex/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
homework/formatter_ex/_build/formatter_lib/: Makefile
homework/formatter_lib/: CMakeLists.txt  Makefile
homework/formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
homework/hello_world_application/: CMakeLists.txt
homework/hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
homework/hello_world_application/_build/formatter_ex/: Makefile  cmake_install.cmake
homework/hello_world_application/_build/formatter_lib/: Makefile
homework/solver_application/: CMakeLists.txt
homework/solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
homework/solver_application/_build/formatter_ex/: Makefile  cmake_install.cmake
homework/solver_application/_build/formatter_lib/: Makefile  cmake_install.cmake
homework/solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
homework/solver_lib/: CMakeLists.txt
homework/solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
sources/: print.cpp
